finalize the webpage with map legend. add a few more visuals

--- a/DOE_Analysis_Cleaning.ipynb
+++ b/DOE_Analysis_Cleaning.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b593098f",
    "metadata": {},
    "outputs": [
@@ -1201,27 +1201,28 @@
        "[5938 rows x 39 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "student_demo_df = student_demo_df.drop_duplicates(subset='school name')\n",
-    "student_demo_df = student_demo_df.set_index('school name')\n",
-    "student_demo_df = student_demo_df.fillna(0)\n",
-    "student_demo_df\n"
+    "student_demo_keep0 = student_demo_df.drop_duplicates(subset='school name')\n",
+    "student_demo_keep0 = student_demo_keep0.set_index('school name')\n",
+    "student_demo_df = student_demo_keep0.fillna(0)\n",
+    "student_demo_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "18002981",
    "metadata": {},
    "outputs": [],
    "source": [
     "#convert to cleaned csv and json\n",
     "student_demo_df.to_csv('CSVs/student_demo.csv')\n",
+    "student_demo_keep0.to_csv('CSVs/student_demo_keep0.csv')\n",
     "student_demo_df.to_json('JSONs/student_demo.json', orient = 'index', compression = 'infer', index = 'true')"
    ]
   },
